--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
     <dependency>
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
-      <version>3.2.1</version>
+      <version>3.3.5</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -59,9 +60,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jodah</groupId>
+      <groupId>net.jodah</groupId>
       <artifactId>concurrentunit</artifactId>
-      <version>0.3.0</version>
+      <version>0.3.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
