--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>net.jodah</groupId>
   <artifactId>lyra</artifactId>
-  <version>0.4.2-SNAPSHOT</version>
+  <version>0.4.2</version>
   <packaging>jar</packaging>
   <name>Lyra</name>
   <url>http://github.com/jhalterman/lyra/</url>
