--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -106,22 +107,24 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.9.1</version>
-        <configuration>
-          <author>false</author>
-          <protected>true</protected>
-          <excludePackageNames>*.internal</excludePackageNames>
-        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
             <goals>
               <goal>jar</goal>
             </goals>
-            <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
           </execution>
         </executions>
+        <configuration>
+          <author>false</author>
+          <protected>true</protected>
+          <excludePackageNames>*.internal</excludePackageNames>
+          <additionalparam>
+            -Xdoclint:none
+            -notimestamp
+            -link https://www.rabbitmq.com/releases/rabbitmq-java-client/current-javadoc/
+          </additionalparam>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
