Fix Javadoc plugin configuration
Use show tag with protected as the value.

--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
         </executions>
         <configuration>
           <author>false</author>
-          <protected>true</protected>
+          <show>protected</show>
           <excludePackageNames>*.internal</excludePackageNames>
           <additionalparam>
             -Xdoclint:none
