Set up Maven Release Plugin

--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <releaseProfiles>release</releaseProfiles>
-          <arguments>-Prelease</arguments>
-        </configuration>
+        <version>2.5.3</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
