--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <configuration>
+          <releaseProfiles>release</releaseProfiles>
+          <arguments>-Prelease</arguments>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
